--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,1 @@
-registry=http://39.106.198.198:18081/nexus/repository/npm-group/
+# registry=http://39.106.198.198:18081/nexus/repository/npm-group/
