--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dian-cli",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "this is a private cli",
-  "main": "index.js",
+  "main": "./bin/index.js",
   "bin": {
     "dian-cli": "./bin/index.js"
   },
